--- a/src/index.pug
+++ b/src/index.pug
@@ -58,10 +58,16 @@ html
                 .icon(data-action="selection/delete" title="delete selected") 💥
             
             .toolbar-group.icon-bar(data-path="group" hidden)
-                //.icon(data-action="group/cancel" title="deselect") ❌
+                //.icon(data-action="group/deselect" title="deselect") ❌
                 .icon(data-action="group/select" title="select cards") 🎴
                 .icon(data-action="group/recolor" title="reroll color") 🎨
                 .icon(data-action="group/delete" title="delete group") 💥
+            
+            .toolbar-group.icon-bar(data-path="link" hidden)
+                //.icon(data-action="link/deselect" title="deselect") ❌
+                .icon(data-action="link/select" title="select cards") 🎴
+                .icon(data-action="link/recolor" title="reroll color") 🎨
+                .icon(data-action="link/delete" title="delete link") 💥
         .editor-blocker(data-action="card-editor/close" data-path="card-editor" data-blocks-clicks hidden)
             .editor-panel(data-block-clicks)
                 .tab-bar
