--- a/src/styles/editor-style.css
+++ b/src/styles/editor-style.css
@@ -184,3 +184,11 @@ textarea {
     background: var(--link-color);
 }
 
+.toolbar-group[data-path="picker"] {
+    background: var(--link-color);
+}
+
+.toolbar-group[data-path="picker"] > span {
+    font-size: .75em;
+    white-space: nowrap;
+}
