--- a/src/index.pug
+++ b/src/index.pug
@@ -51,7 +51,8 @@ html
 
             .toolbar-group.icon-bar(data-path="selection" hidden)
                 //.icon(data-action="selection/cancel" title="deselect") ❌
-                .icon(data-action="selection/center" title="center selected") 🔎
+                //.icon(data-action="selection/center" title="center selected") 🔎
+                .icon(data-action="selection/copy-id" title="copy card id") 🔗
                 .icon(data-action="selection/edit" title="edit cards") 📝
                 .icon(data-action="selection/link" data-path="selection/link" title="link selected") ↗
                 .icon(data-action="selection/group" data-path="selection/group" title="group selected") 📁
