--- a/src/styles/core-style.css
+++ b/src/styles/core-style.css
@@ -31,6 +31,8 @@ body {
        will be constantly moving
        https://stackoverflow.com/questions/26907265/css-will-change-how-to-use-it-how-it-works */
     /* will-change: transform; */
+
+    transition: transform .1s linear;
 }
 
 .card-root {
