--- a/src/styles/core-style.css
+++ b/src/styles/core-style.css
@@ -202,3 +202,14 @@ svg.link line.selection-flash {
     stroke-width: 24px;
 }
 
+.has-image {
+    align-items: center;
+    text-align: center;
+}
+
+.has-image .card-text {
+    background-repeat: no-repeat;
+    background-position: center;
+    color: white;
+    text-shadow: 1px 1px 1px black, -1px 1px 1px black, -1px -1px 1px black, 1px -1px 1px black;
+}
