simplify card styles

--- a/src/index.pug
+++ b/src/index.pug
@@ -46,7 +46,7 @@ html
 
             .toolbar-group.icon-bar(data-path="global")
                 //.icon#open-about(data-action="global/menu" title="information & settings") 🔨
-                .icon(data-action="project/save" title="save in browser") 💾
+                //.icon(data-action="project/save" title="save in browser") 💾
                 .icon(data-action="project/export/html" title="export html") 📦
                 .icon(data-action="project/reset" title="reset to default") ❌
 
