--- a/src/index.pug
+++ b/src/index.pug
@@ -49,6 +49,7 @@ html
             .toolbar-group.icon-bar(data-path="global")
                 .icon#open-about(data-action="global-editor/toggle" title="board settings") 🔨
                 //.icon(data-action="project/save" title="save in browser") 💾
+                .icon(data-action="project/import" title="import html") 📂
                 .icon(data-action="project/export/html" title="export html") 📦
                 //.icon(data-action="project/reset" title="reset to default") ❌
                 .icon(data-action="project/clear-cards" title="delete all cards") 💥
@@ -104,7 +105,6 @@ html
                     .button-row
                         button(data-action="card-editor/image/upload") upload image
                         button(data-action="card-editor/image/remove") remove image
-                        input(data-path="card-editor/image" type="file" accept="image/*" hidden)
                     textarea(data-path="card-editor/image/alt" placeholder="alt text" spellcheck="true")
         #left-sidebar(data-block-clicks data-path="global-editor" hidden)
             .tab-bar
