--- a/src/index.pug
+++ b/src/index.pug
@@ -118,6 +118,9 @@ html
                     select(data-path="global-editor/card-styles/selected")
                         option default card
                     button(data-action="global-editor/card-style/new") new style
+                h2 name
+                .button-row
+                    input(type="text" data-path="global-editor/card-styles/selected/name")
                 #card-style-fields
                 h2 custom css
                 textarea(data-path="global-editor/card-styles/selected/custom-css")
