--- a/src/index.pug
+++ b/src/index.pug
@@ -72,68 +72,8 @@ html
                 span click a card to link to
                 .icon(data-action="picker/cancel" title="cancel picking") ❌
 
-        .editor-blocker(data-action="card-editor/close" data-path="card-editor" data-block-clicks hidden)
-            .editor-panel(data-block-clicks)
-                .tab-bar
-                    div(data-tab-toggle="card-editor/text" data-tab-default) TEXT
-                    div(data-tab-toggle="card-editor/icons") ICONS
-                    div(data-tab-toggle="card-editor/style") STYLE
-                    div(data-tab-toggle="card-editor/image") IMAGE
-                .editor-page.tab-page(data-tab-body="card-editor/text")
-                    .button-row
-                        button(data-action="card-editor/text/bold") bold
-                        button(data-action="card-editor/text/italic") italic
-                        button(data-action="card-editor/text/strike") strike
-                        button(data-action="card-editor/text/header") header
-                    textarea(data-path="card-editor/text" spellcheck="true")
-                .editor-page.tab-page(data-tab-body="card-editor/icons")
-                    each row in [1, 2, 3, 4]
-                        input(data-path=`card-editor/icons/${row}/icon` type="text").icon-select
-                        input(data-path=`card-editor/icons/${row}/action` type="text").icon-action
-                .editor-page(data-tab-body="card-editor/style")
-                    select(data-path="card-editor/styles" size="3")
-                    .button-row
-                        button(data-action="card-editor/styles/edit") edit
-                .editor-page(data-tab-body="card-editor/image")
-                    .button-row
-                        button(data-action="card-editor/image/upload") upload image
-                        button(data-action="card-editor/image/remove") remove image
-                    textarea(data-path="card-editor/image/alt" placeholder="alt text" spellcheck="true")
-        #left-sidebar(data-block-clicks data-path="global-editor" hidden)
-            .tab-bar
-                button(data-action="global-editor/close") ◀
-                button(data-tab-toggle="sidebar/about" data-tab-default) about
-                button(data-tab-toggle="sidebar/board") board
-            .editor-page(data-tab-body="sidebar/about")
-                include:markdown-it(html) about.md
-            .editor-page(data-tab-body="sidebar/board")
-                h1 board settings
-                h2 data
-                .button-column
-                    button(data-action="project/import" title="import from previous export") 📂 import from html
-                    button(data-action="project/export/html" title="export to standalone webpage") 📦 export to html
-                    button(data-action="project/publish/neocities" title="export html directly to neocities website") 😻 publish to neocities
-                    button(data-action="project/clear-cards" title="delete all cards from the board") ❌ remove all cards
-                h2 title
-                .button-row
-                    input(type="text" data-path="global-editor/title")
-                h2 background color
-                .button-row
-                    input(type="color" data-path="global-editor/style/background-color")
-                h1 card styles
-                .button-row
-                    select(data-path="global-editor/card-styles/selected")
-                        option default card
-                    button(data-action="global-editor/card-style/new") new style
-                h2 name
-                .button-row
-                    input(type="text" data-path="global-editor/card-styles/selected/name")
-                #card-style-fields
-                h2 custom css
-                textarea(data-path="global-editor/card-styles/selected/custom-css")
-                .button-row
-                    button(data-action="global-editor/card-style/selected/duplicate") duplicate style
-                    button(data-action="global-editor/card-style/selected/delete" data-path="global-editor/card-style/selected/delete") delete style
+        include pugs/card-editor.pug
+        include pugs/global-editor.pug
         script#project-data(type="text/json")
             include project-data.json
         script loadData();
