--- a/src/styles/core-style.css
+++ b/src/styles/core-style.css
@@ -232,6 +232,9 @@ svg.link line.selection-flash {
 .card-text > h3 {
     margin: 0;
     margin-bottom: .5em;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
 }
 
 .card-icon-bar {
