--- a/src/styles/editor-style.css
+++ b/src/styles/editor-style.css
@@ -150,10 +150,10 @@ body:not([data-player]) .card-root:hover .resize-handle {
 }
 
 /* editor icons page styles */
-.editor-page[data-tab-body="card-editor/icons"] {
+#card-editor-icons {
     display: grid;
 
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 3em auto;
     grid-template-rows: repeat(4, 1fr);
 
     column-gap: 1em;
@@ -165,6 +165,7 @@ body:not([data-player]) .card-root:hover .resize-handle {
     text-align: center;
     font-size: 1em;
 
+    grid-column: 1;
     grid-column-start: 1;
     grid-column-end: 2;
 }
@@ -174,7 +175,7 @@ body:not([data-player]) .card-root:hover .resize-handle {
     font-family: monospace;
 
     grid-column-start: 2;
-    grid-column-end: 5;
+    grid-column-end: 3;
 }
 /* end of editor icons page styles */
 
